--- a/resources/dynamic/numeric.html
+++ b/resources/dynamic/numeric.html
@@ -1,45 +1,38 @@
 {% 
-Dim useList    =  (CurrentADC.PropValue("useList") = "1") ' Convert to boolean
-
 Dim useInput = CurrentADC.PropValue("numUseInput")
 
 Dim inputName  = CurrentQuestion.InputName()
 Dim inputValue = CurrentQuestion.InputValue()
+Dim inputCode = CurrentQuestion.InputCode
 Dim minValue  = CurrentQuestion.MinValue
 Dim maxValue  = CurrentQuestion.MaxValue
 Dim rangeLength = 0
 
-Dim attrMin = On(minValue <> DK, "min=\"" + minValue + "\"", "")
-Dim attrMax = On(maxValue <> DK, "max=\"" + maxValue + "\"", "")
+Dim attrMin = On(minValue <> DK, " min=\"" + minValue + "\"", "")
+Dim attrMax = On(maxValue <> DK, " max=\"" + maxValue + "\"", "")
 
 Dim placeholder = CurrentADC.PropValue("placeholder")
-Dim attrPlaceholder = On(placeholder <> "", "placeholder=\"" + placeholder + "\"", "")
-
-Dim attrRequired = On(CurrentQuestion.IsAllowDK, "required=\"required\"", "")
+Dim attrPlaceholder = On(placeholder <> "", " placeholder=\"" + placeholder + "\"", "")
 
 Dim unitStep = CurrentADC.PropValue("unitStep").ToNumber()
-Dim attrStep = On(unitStep > 1, "step=\"" + unitStep + "\"", "")
+Dim attrStep = On(unitStep > 1, " step=\"" + unitStep + "\"", "")
 
-If useList And minValue <> DK And maxValue <> DK Then
-    rangeLength = (maxValue - minValue) / unitStep
-EndIf
-
-If rangeLength > 0 And rangeLength <= 20 Then
-    Dim i
-    Dim x = minValue
+Dim attrChecked = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered, " checked=\"checked\"", "") 
+Dim attrReadOnly = On(CurrentQuestion.HasDK and CurrentQuestion.HasAnswered and CurrentADC.PropValue("numDkButton") = "1", " readonly=\"readonly\"", "") 
 %}
-    <select name="{%= inputName %}">
-        <option value="">{%:= CurrentADC.PropValue("firstOptionText") %}</option>    
-    {% For i = 0 To rangeLength %}
-        <option value="{%:= x %}">{%= CurrentADC.PropValue("numBoxPrefix") %}{%:= x %}{%= CurrentADC.PropValue("numBoxSuffix") %}</option>
-        {% x = x + unitStep %}
-    {% Next %}
-    </select>
-{% Else %}
 	<span class="prefix">{%= CurrentADC.PropValue("numBoxPrefix") %}</span>
-    <input type="number" id="{%= inputName %}" class="inputnumber" name="{%= inputName %}" value="{%:= inputValue %}" {%:= attrMin %} {%:= attrMax %} {%:= attrStep %} {%:= attrPlaceholder %} {%:= attrRequired %}/>
+	<input type="number" id="askia-input-number{%= inputCode %}" class="inputnumber" name="{%= inputName %}" value="{%:= inputValue %}"{%:= attrMin %}{%:= attrMax %}{%:= attrStep %}{%:= attrPlaceholder %}{%:= attrReadOnly %}/>
 	{% If (useInput = "2") Then %}
-	<input type="text" name="currency_{%= inputName %}" value="{%:= inputValue %}" class="thousand" />
+	<input type="text" id="askia-input-currency{%= inputCode %}" name="currency_{%= inputName %}" value="{%:= inputValue %}" class="thousand"{%:= attrReadOnly %} />
 	{% EndIf %}
 	<span class="suffix">{%= CurrentADC.PropValue("numBoxSuffix") %}</span>
-{% EndIf %}
+    {% If (CurrentADC.PropValue("numDkButton") = "1" and CurrentQuestion.IsAllowDK ) Then %}
+    <label class="DK numericDK">
+        <input type="hidden" name="B{%= inputCode %}">
+        <input type="checkbox" id="askia-input-number_{%= inputCode %}_-1" class="dkbutton" name="M{%= inputCode %} -1" {%:= attrChecked %}>
+        <label for="askia-input-number_{%= inputCode %}_-1" class="askia-checkbox"></label>
+        <label for="askia-input-number_{%= inputCode %}_-1" class="askia-response-label">
+            <span class="caption">{%:= CurrentADC.PropValue("numDkCaption") %}</span>
+        </label>
+    </label>
+    {% EndIf %}
